log.txt
ExecSQLtuples(): SQL command failed: SELECT pr.id, pr.descrizione, pr.nome, pr.prezzo, fr.nome AS nomeF FROM prodotto pr, fornitore fr WHERE pr.fornitore = fr.id
ExecSQLtuples(): PGRES_FATAL_ERROR



ricerca ordini trasportatore:
ExecSQLtuples(): SQL command failed: SELECT ord.id, cst.nome, ord.datarich, ord.stato, ord.pagamento, ord.indirizzo, ord.totale FROM Ordine ord, Customer cst WHERE cst.id = ord.customer AND ord.id NOT IN (SELECT id FROM ordineconse) AND ord.id NOT IN (SELECT ordine FROM consegna)
ExecSQLtuples(): PGRES_FATAL_ERROR

gestisci corrieri trasportatore:
ExecSQLtuples(): SQL command failed: SELECT id, nome, cognome FROM corriere WHERE azienda = 1
ExecSQLtuples(): PGRES_FATAL_ERROR

Customer_Server.cpp: In constructor ‘Customer_Server::Customer_Server()’:
Customer_Server.cpp:37:5: error: ‘pistacheThread’ was not declared in this scope
   37 |     pistacheThread = std::thread(&Customer_Server::startPistache, this);
      |     ^~~~~~~~~~~~~~
Customer_Server.cpp: In member function ‘void Customer_Server::defineRoutes()’:
Customer_Server.cpp:41:5: error: ‘router’ was not declared in this scope
   41 |     router.get("/", [this](const Rest::Request& req, Http::ResponseWriter res) {
      |     ^~~~~~
Customer_Server.cpp: In member function ‘void Customer_Server::startPistache()’:
Customer_Server.cpp:59:23: error: ‘router’ was not declared in this scope
   59 |     server.setHandler(router.handler());
      |                       ^~~~~~
Customer_Server.cpp: In destructor ‘Customer_Server::~Customer_Server()’:
Customer_Server.cpp:64:9: error: ‘pistacheThread’ was not declared in this scope
   64 |     if (pistacheThread.joinable()) {
      |         ^~~~~~~~~~~~~~
make: *** [Makefile:38: customer_server] Errore 1



